--- a/pinduoduo/src/app/home/components/home-detail/home-detail.component.css
+++ b/pinduoduo/src/app/home/components/home-detail/home-detail.component.css
@@ -1,3 +1,12 @@
 .active{
     color: red;
 }
+.ad-contaniner{
+    padding: 0 0.5rem;
+    background-color: #fff;
+}
+.ad-image{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
