--- a/pinduoduo/src/app/shared/components/image-slider/image-slider.component.css
+++ b/pinduoduo/src/app/shared/components/image-slider/image-slider.component.css
@@ -39,6 +39,9 @@
   border-radius: 50%;
   margin-right: 5px;
 }
+.slider-button-select{
+  background-color: red!important;
+}
 .container .image-slider::-webkit-scrollbar {
   display: none;
   width: 0 !important;
