--- a/pinduoduo/src/app/recommend/components/recommend-container/recommend-container.component.html
+++ b/pinduoduo/src/app/recommend/components/recommend-container/recommend-container.component.html
@@ -1,3 +1,10 @@
-<p>
-  recommend-container works!
-</p>
+<div class="ad-contaniner" *ngIf="(ad$ | async) as ad">
+    <img [src]="ad.imageUrl" alt="" class="ad-image">
+  </div>
+  <app-vertical-drid [itemWidth]="'10rem'" [itemHeight]="'1rem'">
+    <app-product-tile  
+    *ngFor="let item of products$ | async" 
+    [product]="item"
+    [routerLink]="['/products',item.id]"
+    ></app-product-tile>
+  </app-vertical-drid>
