--- a/pinduoduo/src/app/app.component.html
+++ b/pinduoduo/src/app/app.component.html
@@ -1,2 +1,4 @@
 <router-outlet></router-outlet>
 <app-footer [selectedIndex]="selectedIndex$ | async" (selectedId)="handleTabSelect($event)"></app-footer>
+<div id="overlay" class="hidden" (click)="removeDialog()"></div>
+<div id="dialog-container" class="hidden"></div>
