--- a/pinduoduo/src/app/app.component.css
+++ b/pinduoduo/src/app/app.component.css
@@ -11,7 +11,7 @@
     display: show;
 }
 #dialog-container{
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 0;
     width: 100%;
