--- a/pinduoduo/src/app/my/components/my-container/my-container.component.html
+++ b/pinduoduo/src/app/my/components/my-container/my-container.component.html
@@ -1,3 +1,49 @@
-<p>
-  my-container works!
-</p>
+<div class="container" *ngIf="profile$ | async as profile">
+  <div class="my-info">
+    <img appAvatar avatarSize="5rem" [src]="profile.avatar" alt="" class="my-avatar">  
+    <div class="my-name">
+      {{profile.name}}
+      <img src="assets/icons/wechat.png" alt="">
+    </div>  
+    <div class="my-badge">
+      勋章墙
+      <img src="assets/icons/navigate_next.png" alt="">
+    </div>
+    <div class="my-cashback">
+        <span>
+            <img src="assets/icons/cashback.png" alt="">
+            拼单返现
+          </span>
+    </div>
+    <div class="my-membership">
+      <span>
+        <img src="assets/icons/membership.png" alt="">
+        省钱月卡
+      </span>
+    </div>
+  </div>
+  <div class="brand">
+    <span class="title">品牌特卖</span>
+    <span class="detail">自然堂直降</span>
+    <img src="assets/icons/navigate_next.png" alt="">
+  </div>
+  <div class="order-status">
+    <div class="title">
+      我的订单<span>查看全部 <img src="assets/icons/navigate_next.png" alt=""></span>
+    </div>
+    <app-horizontal-grid [cols]='5' [displayCols]='5'>
+      <div appGridItem *ngFor="let item of orderItems">
+          <img [src]="item.icon" alt="" appGridItemImage="2rem">
+          <span appGridItemTitle="0.8rem">{{ item.title }}</span>
+      </div>
+    </app-horizontal-grid> 
+  </div>
+  <div class="tools">
+      <app-horizontal-grid [cols]='5' [displayCols]='5'>
+          <div appGridItem *ngFor="let item of toolsItems">
+              <img [src]="item.icon" alt="" appGridItemImage="2rem">
+              <span appGridItemTitle="0.8rem">{{ item.title }}</span>
+          </div>
+        </app-horizontal-grid> 
+  </div>
+</div>
