--- a/pinduoduo/src/app/product/components/product-variant-dialog/product-variant-dialog.component.html
+++ b/pinduoduo/src/app/product/components/product-variant-dialog/product-variant-dialog.component.html
@@ -1,5 +1,41 @@
 <app-dialog>
-  <p>
-    product-variant-dialog works!
-  </p>  
-</app-dialog>
+    <div class="image-container">
+      <img
+        class="product-image"
+        [src]="variants[selectedVariantIndex].productVariantImages[0].imgUrl"
+      />
+      <div class="price">
+        {{ price | currency: 'CNY'
+        }}<img class="close-button" appCloseDialog src="assets/icons/close.png" />
+      </div>
+      <div class="selected-desc">已选择:{{ selectedVariantName }}</div>
+    </div>
+    <div class="content">
+      <div>套餐</div>
+      <div class="variant">
+        <div
+          *ngFor="let variant of variants; let ind = index"
+          [ngClass]="{ 'variant-selected': ind === selectedVariantIndex }"
+          (click)="handleSelected(ind)"
+        >
+          {{ variant.name }}
+        </div>
+      </div>
+      <app-product-amount
+        (amountChange)="handleAmountChange($event)"
+      ></app-product-amount>
+    </div>
+    <div class="buttons">
+      <button
+        class="confirm-button"
+        (click)="handleConfirm()"
+        [ngStyle]="{
+          'background-color':
+            count > 0 && selectedVariantIndex >= 0 ? 'red' : 'darkgray'
+        }"
+      >
+        确定
+      </button>
+    </div>
+  </app-dialog>
+  
